--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,10 @@
             <artifactId>datomic-pro</artifactId>
             <version>0.9.5561.50</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
